--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.1AgroService">
         <activity
-            android:name=".Cadastro"
+            android:name=".activities.CadastroActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
