--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.1AgroService"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".Perfil"
+            android:name=".activities.PerfilActivity"
             android:exported="false" />
         <activity
             android:name=".activities.CadastroActivity"
